--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <h1>
         Hello World!
     </h1>
+    <h2>
+        GitHub funktioniert!
+    </h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus quae deleniti distinctio eligendi praesentium officiis obcaecati tempore aspernatur placeat? Corrupti quia enim omnis libero quam voluptates neque et distinctio odio.</p>
 </main>
 
 </body>
