--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <h2>
         GitHub funktioniert!
     </h2>
+   <h2>
+        GitHub funktioniert wieder!
+    </h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus quae deleniti distinctio eligendi praesentium officiis obcaecati tempore aspernatur placeat? Corrupti quia enim omnis libero quam voluptates neque et distinctio odio.</p>
 </main>
 
