--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="vendor/ResponsiveSlides.js-master/responsiveslides.min.js"></script>
     <script src="assets/js/app.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Hello World</title>
